--- a/en/beak.html
+++ b/en/beak.html
@@ -144,7 +144,7 @@ Platform: macOS Sierra</p>
 <p class="green">Excellent software should be elegant, reliable and small. Especially, building small software is very important for deeply-embedded systems. Lovingly crafting software as elegant and small as possible is the real programmer's cultivation.</p>
 
 <p><a href="https://itunes.apple.com/us/app/beak/id1337625630?mt=12" target="_blank" class="appstore_download_link"><img src="../images/available_on_macappstore.png" > </a></p><br><br><br><br><br><br>
-<p>If you can't open the link above, please launch App Store and found Beak by searching.</p>
+<p>If you can't open the link above, please launch App Store and find Beak by searching.</p>
 <br>
 
 
