--- a/en/ccreviewer.html
+++ b/en/ccreviewer.html
@@ -52,7 +52,7 @@ CCReviewer is a powerful chess analyser, move recorder and game records player. 
 
 <p><a href="https://apps.apple.com/us/app/ccreviewer2/id1570366767?mt=12" target="_blank" class="appstore_download_link">
 <img src="../images/available_on_macappstore.png" style="margin-left:1em;"> </a></p><br><br><br><br><br>
-<p>If you can't open the link above, please launch App Store and found <lt>"CCReviewer2"</lt> by searching.</p>
+<p>If you can't open the link above, please launch App Store and find <lt>"CCReviewer2"</lt> by searching.</p>
 
 <h2>Screenshots</h2>
 <p><a href="../images/ccreviewer/1.png" target="_blank"><img src="../images/ccreviewer/1.png" class="screenshots"/></a></p>
