--- a/en/debugger.html
+++ b/en/debugger.html
@@ -49,7 +49,7 @@ Speare version 1.2.404
 
 <p><a href="https://apps.apple.com/us/app/speare/id1473902558?mt=12" target="_blank" class="appstore_download_link">
 <img src="../images/available_on_macappstore.png" style="margin-left:1em;"> </a></p><br><br><br><br><br>
-<p>If you can't open the link above, please launch App Store and found <lt>"Speare"</lt> by searching.</p>
+<p>If you can't open the link above, please launch App Store and find <lt>"Speare"</lt> by searching.</p>
 
 <p><a href="../images/speare/llvm_in_speare_code_editor.png" target="_blank"><img src="../images/speare/llvm_in_speare_code_editor.png" class="screenshots"/></a><br><br>
 Screenshot of <a href="https://www.llvm.org/" target="_blank">LLVM</a> with fast code completion and instant diff operation in Speare code editor.
