--- a/en/guard.html
+++ b/en/guard.html
@@ -31,7 +31,7 @@
 
 <p class="greenbig">It's free!</p>
 <p><a href="https://itunes.apple.com/us/app/guard7/id1348667059?ls=1&mt=12" target="_blank" class="appstore_download_link"><img src="../images/available_on_macappstore.png" style="margin-left:1em;"> </a></p><br><br><br><br>
-<p><em>If you can't open the link above, please launch App Store and found Guard7 by searching. Please kindly donate the author by purchasing other apps developed by the author or commend this app on your blog or rate this app so that helping other people can more easily find it.</em></p>
+<p><em>If you can't open the link above, please launch App Store and find Guard7 by searching. Please kindly donate the author by purchasing other apps developed by the author or commend this app on your blog or rate this app so that helping other people can more easily find it.</em></p>
 
 <h2>Why</h2>
 <p class="block"><i>The most difference between "public key cryptography" and normal "password protected cryptography" is that the first approach don't ask you to distribute any password to anyone or any unsafe place, e.g. email, chat app, or internet. That is, you send an encrypted message or file to someone, but don't need send any password to him/her. And the most important point is, you need an encryption tool that has industrial strength to protect your confidential information.</i></p>
