--- a/en/lyricsmaker.html
+++ b/en/lyricsmaker.html
@@ -35,7 +35,7 @@
 <p class="greenbig"><span class="strike0">It's free!</span></p>
 <p><a href="https://itunes.apple.com/us/app/lyricsmaker/id1411706886?ls=1&mt=12" target="_blank" class="appstore_download_link"><img src="../images/available_on_macappstore.png" style="margin-left:1em;"> </a></p>
 <br><br><br><br><br><br>
-<p>If you can't open the link above, please launch App Store and found LyricsMaker by searching.</p>
+<p>If you can't open the link above, please launch App Store and find LyricsMaker by searching.</p>
 
 
 <p class="block" style="display:none;">
