--- a/en/mathHelfer.html
+++ b/en/mathHelfer.html
@@ -32,7 +32,7 @@
 
 <div>
 <p><a href="https://apps.apple.com/us/app/mathhelfer/id1479973709?mt=12" target="_blank" class="appstore_download_link"><img src="../images/available_on_macappstore.png" style="margin-left:1em;"> </a></p><br><br><br><br>
-<p>If you can't open the link above, please launch App Store and found MathHelfer by searching.</p>
+<p>If you can't open the link above, please launch App Store and find MathHelfer by searching.</p>
 </div>
 
 
