--- a/en/metalogic.html
+++ b/en/metalogic.html
@@ -30,7 +30,7 @@
 
 <p><a href="https://apps.apple.com/us/app/metalogic/id1541450342?mt=12" target="_blank" class="appstore_download_link"><img src="../images/available_on_macappstore.png" style="margin-left:1em;"> </a></p>
 <br><br><br><br>
-<p>If you can't open the link above, please launch App Store and found MetaLogic by searching.</p>
+<p>If you can't open the link above, please launch App Store and find MetaLogic by searching.</p>
 
 
 <h2>Type of Programming Assets</h2>
