--- a/en/sounler.html
+++ b/en/sounler.html
@@ -31,7 +31,7 @@
 
 <p><a href="https://apps.apple.com/us/app/sounler/id1534406144?mt=12" target="_blank" class="appstore_download_link"><img src="../images/available_on_macappstore.png" style="margin-left:1em;"> </a></p>
 <br><br><br><br>
-<p>If you can't open the link above, please launch App Store and found Sounler by searching.</p>
+<p>If you can't open the link above, please launch App Store and find Sounler by searching.</p>
 
 
 <h2>Audio Converter</h2>
