--- a/en/tungsyu.html
+++ b/en/tungsyu.html
@@ -68,7 +68,7 @@ Example: command line data querying for one month of a year.<br><br>
 
 
 <p><a href="https://itunes.apple.com/us/app/tungsyu/id1457444475?mt=12" target="_blank" class="appstore_download_link" ><img src="../images/available_on_macappstore.png" style="margin-left:1em;"> </a></p><br><br><br><br>
-<p>If you can't open the link above, please launch App Store and found Tungsyu by searching.</p>
+<p>If you can't open the link above, please launch App Store and find Tungsyu by searching.</p>
 
 <p><img src="../images/Tungsyu/Yangtze_River.jpg" class="screenshots"/><br>
 The map of Yangtze River.
