--- a/en/iq.html
+++ b/en/iq.html
@@ -65,7 +65,7 @@ F: Learn &amp; abstract reasoning.<br>
 download the funny app from App Store: <br><br><a class="appstore_download_link" href="https://itunes.apple.com/us/app/mr-iq/id1302783378?ls=1&mt=8"></a>
 <br></p>
 <p><br><br></p>
-<p>If you can't open the link above, please launch App Store and found <lt>Mr.IQ</lt> by searching.</p>
+<p>If you can't open the link above, please launch App Store and find <lt>Mr.IQ</lt> by searching.</p>
 
 <p><audio autoplay loop preload="none" id="myaudio">
 <source src="../audio/ripples.mp3" type="audio/mpeg"/>
