--- a/en/littlefox.html
+++ b/en/littlefox.html
@@ -48,7 +48,7 @@
 
 
 <p><a href="https://itunes.apple.com/us/app/littlefox/id1459361351?mt=12" target="_blank" class="appstore_download_link"><img src="../images/available_on_macappstore.png" style="margin-left:1em;"> </a></p><br><br><br><br>
-<p>If you can't open the link above, please launch App Store and found LittleFox by searching.</p>
+<p>If you can't open the link above, please launch App Store and find LittleFox by searching.</p>
 
 <h2>Screenshot</h2>
 <p>
