--- a/en/speare.html
+++ b/en/speare.html
@@ -44,7 +44,7 @@
 
 <p><a href="https://apps.apple.com/us/app/speare/id1473902558?mt=12" target="_blank" class="appstore_download_link"><img src="../images/available_on_macappstore.png" style="margin-left:1em;"> </a><br><br><br><br></p>
 
-<p>If you can't open the link above, please launch App Store and found Speare by searching.</p>
+<p>If you can't open the link above, please launch App Store and find Speare by searching.</p>
 
 <h2>Features</h2>
 <p><ul>
