--- a/en/taihaa.html
+++ b/en/taihaa.html
@@ -79,7 +79,7 @@
 </p>
 
 <p><a href="https://itunes.apple.com/us/app/taihaa/id1457696997?mt=12" target="_blank" class="appstore_download_link"><img src="../images/available_on_macappstore.png" style="margin-left:1em;"> </a></p><br><br><br><br><br>
-<p>If you can't open the link above, please launch App Store and found Taihaa by searching.</p>
+<p>If you can't open the link above, please launch App Store and find Taihaa by searching.</p>
 <p><br><br></p>
 
 <h2>References</h2>
