--- a/en/vtool.html
+++ b/en/vtool.html
@@ -30,7 +30,7 @@
 <p class="greenbig">It's free!</p>
 <p><a href="https://apps.apple.com/us/app/vtool/id1537540332?mt=12" target="_blank" class="appstore_download_link"><img src="../images/available_on_macappstore.png" style="margin-left:1em;"> </a>
 <br><br><br><br><br><br>
-If you can't open the link above, please launch App Store and found vTool by searching.
+If you can't open the link above, please launch App Store and find vTool by searching.
 </p>
 
 
