--- a/en/screenshots.html
+++ b/en/screenshots.html
@@ -40,16 +40,22 @@ The ultra light code editor.
 
 <p><i><lt>Speare is only ~1.1MB!</lt> <span class="warning">extremely small code editor with full featured scripting language debuggers.</span></i></p>
 
-
 <h2>Screenshots</h2>
 <p>
-<a href="../images/speare/screenshots/c_in_speare.png" target="_blank"><img src="../images/speare/screenshots/c_in_speare.png" class="screenshots"/></a><br><br>
-<a href="../images/speare/screenshots/symbol_index_in_speare.png" target="_blank"><img src="../images/speare/screenshots/symbol_index_in_speare.png" class="screenshots"/></a><br><br>
-<a href="../images/speare/screenshots/python_in_speare.png" target="_blank"><img src="../images/speare/screenshots/python_in_speare.png" class="screenshots"/></a><br><br>
-<a href="../images/speare/screenshots/java_in_speare.png" target="_blank"><img src="../images/speare/screenshots/java_in_speare.png" class="screenshots"/></a><br><br>
-<a href="../images/speare/screenshots/awk_in_speare.png" target="_blank"><img src="../images/speare/screenshots/awk_in_speare.png" class="screenshots"/></a><br><br>
-<a href="../images/speare/screenshots/lua_in_speare.png" target="_blank"><img src="../images/speare/screenshots/lua_in_speare.png" class="screenshots"/></a><br><br>
-<a href="../images/speare/screenshots/ruby_in_speare.png" target="_blank"><img src="../images/speare/screenshots/ruby_in_speare.png" class="screenshots"/></a><br><br>
+<a href="../images/speare/screenshots/c_in_speare.png" target="_blank"><img src="../images/speare/screenshots/c_in_speare.png" class="screenshots"/></a><br>
+Edit C source code in Speare code editor.<br><br>
+<a href="../images/speare/screenshots/symbol_index_in_speare.png" target="_blank"><img src="../images/speare/screenshots/symbol_index_in_speare.png" class="screenshots"/></a><br>
+Edit C++ source code in Speare code editor.<br><br>
+<a href="../images/speare/screenshots/python_in_speare.png" target="_blank"><img src="../images/speare/screenshots/python_in_speare.png" class="screenshots"/></a><br>
+Edit Python source code in Speare code editor.<br><br>
+<a href="../images/speare/screenshots/java_in_speare.png" target="_blank"><img src="../images/speare/screenshots/java_in_speare.png" class="screenshots"/></a><br>
+Edit Java source code in Speare code editor.<br><br>
+<a href="../images/speare/screenshots/awk_in_speare.png" target="_blank"><img src="../images/speare/screenshots/awk_in_speare.png" class="screenshots"/></a><br>
+Edit AWK source code in Speare code editor.<br><br>
+<a href="../images/speare/screenshots/lua_in_speare.png" target="_blank"><img src="../images/speare/screenshots/lua_in_speare.png" class="screenshots"/></a><br>
+Edit Lua source code in Speare code editor.<br><br>
+<a href="../images/speare/screenshots/ruby_in_speare.png" target="_blank"><img src="../images/speare/screenshots/ruby_in_speare.png" class="screenshots"/></a><br>
+Edit Ruby source code in Speare code editor.<br><br>
 </p>
 
 <p><audio autoplay loop preload="none" id="myaudio">
