--- a/en/screenshots.html
+++ b/en/screenshots.html
@@ -34,7 +34,7 @@ The ultra light code editor.
 </pre></p>
         <h1></h1>
         <p class="lead"><i>
-        <a href="speare.html" target="_blank">Speare </a> is a small and friendly code editor. You can use it to edit source code files, programming and debugging. It designed to make programming feels light, simple and free. Speare not only has an efficient code navigation and call routines tracing ability but also has flexibility to extend it to support special developing requirements. Speare code editor includes an ultra lightweight debugging environment for C, C++, Ruby, mruby, Lua, Python, PHP, Perl and Tcl, and give people complete freedom to control and customise the debugging environment for a new programming language.</i>
+        <a href="speare.html" target="_blank">Speare </a> is a small and friendly code editor. You can use it to edit source code files, programming and debugging. It designed to make programming feels light, simple and free. Speare not only has an efficient code navigation and call routines tracing ability but also has flexibility to extend it to support special developing requirements. Speare code editor includes an ultra light debugging environment for C, C++, Ruby, mruby, Lua, Python, PHP, Perl, Tcl and AWK, and give people complete freedom to control and customise the debugging environment for a new programming language.</i>
         </p>
     </div>
 
