--- a/en/debugger.html
+++ b/en/debugger.html
@@ -39,8 +39,9 @@ Speare version 1.2.404
         </p>
     </div>
 
-<h2 class="dark">What's new</h2>
-<p><span class="dark">Java debugging supported. The Java debugger of Speare support all kinds of JVM that implemented Java Debugger API, JDK all version from 6 and later, all kinds of Java application development. Android application, J2ME (Java ME) games, standalone Java J2SE application and game for desktops, J2EE (Java EE) server side application for all kinds of application server, such as Tomcat, Spring, Weblogic, WebSphere, JBoss (Wildfly), Glassfish, and Jetty etc. </span> <!--  →  a href="http://www.sevenuc.com/download/Small_IDE_for_Java_development.pdf" target="_blank">Small_IDE_for_Java_development.pdf</a --><br>
+<h2 class="dark"><small>What's new</small></h2>
+<p class="dark"><small>Java debugging supported. The Java debugger of Speare support all kinds of JVM that implemented Java Debugger API, JDK all version from 6 and later, all kinds of Java application development. Android application, J2ME (Java ME) games, standalone Java J2SE application and game for desktops, J2EE (Java EE) server side application for all kinds of application server, such as Tomcat, Spring, Weblogic, WebSphere, JBoss (Wildfly), Glassfish, and Jetty etc. </small>
+<!--  →  a href="http://www.sevenuc.com/download/Small_IDE_for_Java_development.pdf" target="_blank">Small_IDE_for_Java_development.pdf</a --><br>
 <small> (update: Jul 11 2021)</small>
 </p>
 
