--- a/en/cantonese.html
+++ b/en/cantonese.html
@@ -34,7 +34,7 @@
 <div class="mainscreen">
 
 <video class="videobox" id="mainVideo" width="272" height="480" controls autoplay>
-<source src="/videos/hongkong.mp4" type="video/mp4">
+<source src="http://www.sevenuc.com/videos/hongkong.mp4" type="video/mp4">
 </video>
 
 <p><span style="color:#cce619;">A grammar handbook with true native Hong Kong tongue.</span><br>
