--- a/en/lyricsmaker.html
+++ b/en/lyricsmaker.html
@@ -43,8 +43,8 @@ From May 2020, LyricsMaker turned to be a paid app, because thousands of people 
 <em>Sorry, from May 2020, LyricsMaker turned to be a paid app, it will return to be free again forever if somebody do some kind things for it.</em></p>
 
 <p><audio autoplay loop preload="none" id="myaudio">
-<source src="../audio/ripples.mp3" type="audio/mpeg"/>
-<source src="../audio/ripples.ogg" type="audio/ogg"></audio></p>
+<source src="http://www.sevenuc.com/audio/ripples.mp3" type="audio/mpeg"/>
+<source src="http://www.sevenuc.com/audio/ripples.ogg" type="audio/ogg"></audio></p>
         
 <h2>Screenshot</h2>
 <p>
