--- a/en/proverbs.html
+++ b/en/proverbs.html
@@ -787,7 +787,7 @@ too good to be true</p></td>
 <a class="appstore_download_link" href="https://itunes.apple.com/us/app/yue-cantonese-hong-kong-slang/id898134235?mt=8"></a></p>
 
 
-<p><audio autoplay loop preload="auto"><source src="../audio/boss.mp3" type="audio/mpeg" /></audio></p>
+<p><audio autoplay loop preload="auto"><source src="http://www.sevenuc.com/audio/boss.mp3" type="audio/mpeg" /></audio></p>
 
 <p><br><br><br><br></p>
 </div><!-- container-fluid -->
