--- a/en/sounler.html
+++ b/en/sounler.html
@@ -91,8 +91,8 @@ FLAC →  MP3<br>
 </p>
 
 <p><audio autoplay loop preload="none" id="myaudio">
-<source src="../audio/lemmings.mp3" type="audio/mpeg"/>
-<source src="../audio/lemmings.ogg" type="audio/ogg"></audio></p>
+<source src="http://www.sevenuc.com/audio/lemmings.mp3" type="audio/mpeg"/>
+<source src="http://www.sevenuc.com/audio/lemmings.ogg" type="audio/ogg"></audio></p>
         
 <h2>References:</h2>
 <p><ul>
