--- a/en/speare.html
+++ b/en/speare.html
@@ -226,7 +226,7 @@ b. Configure files: Autoconf, Automake, Make, M4, Makefile, Vim, Kconfig, LdScri
 <p><!-- lt><i>Diamond is small!</i></lt><br-->
 <lt><i>Crafting software as small as possible!</i></lt></p>
 
-<p><audio autoplay loop preload="none"><source src="../audio/ripples.mp3" type="audio/mpeg" /></audio></p>
+<p><audio autoplay loop preload="none"><source src="http://www.sevenuc.com/audio/ripples.mp3" type="audio/mpeg" /></audio></p>
 
 
 <p><br><br><br><br></p>
