--- a/en/tts.html
+++ b/en/tts.html
@@ -138,8 +138,8 @@ The engine will be finally open source, but not now, please kindly donate me to 
 
 <p><br><br><br><br></p>
 <p><audio autoplay loop preload="none" id="myaudio">
-<source src="../audio/ripples.mp3" type="audio/mpeg" />
-<source src="../audio/ripples.ogg" type="audio/ogg">
+<source src="http://www.sevenuc.com/audio/ripples.mp3" type="audio/mpeg" />
+<source src="http://www.sevenuc.com/audio/ripples.ogg" type="audio/ogg">
 </audio></p>
 
 <p><br></p>
