--- a/en/anida.html
+++ b/en/anida.html
@@ -203,7 +203,7 @@ Mr. 陳百強/Danny Chan Pak-keung.<br>
    <b>Enjoy ultra small audio file now!</b>
 </p>
 <p><br></p>
-<p><audio autoplay loop preload="none"><source src="../audio/life.mp3" type="audio/mpeg" /></audio></p>
+<p><audio autoplay loop preload="none"><source src="http://www.sevenuc.com/audio/life.mp3" type="audio/mpeg" /></audio></p>
 
 <p><br><br></p>
 </div><!-- container-fluid -->
