--- a/en/apps.html
+++ b/en/apps.html
@@ -123,8 +123,8 @@
 </div><!-- row -->
 
 <p><audio autoplay loop preload="none" id="myaudio">
-<source src="../audio/ripples.mp3" type="audio/mpeg"/>
-<source src="../audio/ripples.ogg" type="audio/ogg"></audio></p>
+<source src="http://www.sevenuc.com/audio/ripples.mp3" type="audio/mpeg"/>
+<source src="http://www.sevenuc.com/audio/ripples.ogg" type="audio/ogg"></audio></p>
 
 <hr><br><br>
 <h1>iOS Apps</h1>
