--- a/en/ccreviewer.html
+++ b/en/ccreviewer.html
@@ -82,8 +82,8 @@ Chinese Chess contains the ancient oriental profound philosophy and wisdom, that
 </dir>
 
 <p><audio autoplay loop preload="none" id="myaudio">
-<source src="../audio/ripples.mp3" type="audio/mpeg" />
-<source src="../audio/ripples.ogg" type="audio/ogg">
+<source src="http://www.sevenuc.com/audio/ripples.mp3" type="audio/mpeg" />
+<source src="http://www.sevenuc.com/audio/ripples.ogg" type="audio/ogg">
 </audio></p>
 
 </div>
