--- a/en/debugger.html
+++ b/en/debugger.html
@@ -198,7 +198,7 @@ C can make strongest software by programmer crafting with patient and willpower.
 <!--lt><i>Diamond is small!</i></lt><br -->
 <lt><i>Crafting software as small as possible!</i></lt>
 </p>
-<p><audio autoplay loop preload="none"><source src="../audio/bamboo.mp3" type="audio/mpeg" /></audio></p>
+<p><audio autoplay loop preload="none"><source src="http://www.sevenuc.com/audio/bamboo.mp3" type="audio/mpeg" /></audio></p>
 
 
 <div class="row">
