--- a/en/guard.html
+++ b/en/guard.html
@@ -356,7 +356,7 @@ it is very convenient and simple.
 
 
 <p><br></p>
-<p><audio autoplay loop preload="none"><source src="../audio/bamboo.mp3" type="audio/mpeg" /></audio></p>
+<p><audio autoplay loop preload="none"><source src="http://www.sevenuc.com/audio/bamboo.mp3" type="audio/mpeg" /></audio></p>
 
 <p><br><br></p>
 </div><!-- container-fluid -->
