--- a/en/iosfinder.html
+++ b/en/iosfinder.html
@@ -55,7 +55,7 @@ So, this app developed to help you manage files in your iOS devices just like on
 
 
 <p><video class="videobox" id="mainVideo" width="480" controls autoplay>
-<source src="/videos/editor.mp4" type="video/mp4">
+<source src="http://www.sevenuc.com/videos/editor.mp4" type="video/mp4">
 </video></p>
 <p>The above video is very old, but demonstrate the app's features.</p>
 
@@ -105,10 +105,11 @@ So, this app developed to help you manage files in your iOS devices just like on
 <a href="https://play.google.com/store/apps/details?id=com.theolivetree.ftpserver&hl=en_US">One of FTP Server app on Android phone.</a>
 </p>
 
-<p><audio autoplay loop preload="none" id="myaudio">
-<source src="../audio/ripples.mp3" type="audio/mpeg"/>
-<source src="../audio/ripples.ogg" type="audio/ogg"></audio></p>
-        
+<!--p><audio autoplay loop preload="none" id="myaudio">
+<source src="http://www.sevenuc.com/audio/ripples.mp3" type="audio/mpeg"/>
+<source src="http://www.sevenuc.com/audio/ripples.ogg" type="audio/ogg"></audio>
+</p-->
+
 <h2>Screenshots</h2>
 <div class="screenshots__">
 <p><a href="../images/editor/405.png" target="_blank"><img src="../images/editor/405.png" class="screenshots"></a></p>
