--- a/en/mathHelfer.html
+++ b/en/mathHelfer.html
@@ -122,7 +122,7 @@
 </p>
 
 
-<p><audio autoplay loop preload="none"><source src="../audio/ripples.mp3" type="audio/mpeg" /></audio></p>
+<p><audio autoplay loop preload="none"><source src="http://www.sevenuc.com/audio/ripples.mp3" type="audio/mpeg" /></audio></p>
 
 
 <p><br><br><br></p>
