--- a/en/screenshots.html
+++ b/en/screenshots.html
@@ -59,8 +59,8 @@ Edit Ruby source code in Speare code editor.<br><br>
 </p>
 
 <p><audio autoplay loop preload="none" id="myaudio">
-<source src="../audio/ripples.mp3" type="audio/mpeg" />
-<source src="../audio/ripples.ogg" type="audio/ogg">
+<source src="http://www.sevenuc.com/audio/ripples.mp3" type="audio/mpeg" />
+<source src="http://www.sevenuc.com/audio/ripples.ogg" type="audio/ogg">
 </audio></p>
 
 <p><br><br><br><br></p>
