--- a/en/train.html
+++ b/en/train.html
@@ -31,7 +31,7 @@
     
 
 <video class="videobox" id="mainVideo" width="400" height="234" controls autoplay>
-<source src="/videos/train.mp4" type="video/mp4">
+<source src="http://www.sevenuc.com/videos/train.mp4" type="video/mp4">
 </video>
 
 
