--- a/en/tungsyu.html
+++ b/en/tungsyu.html
@@ -83,7 +83,7 @@ The map of Yangtze River.
 <h2><i>References</i></h2>
 <p><i><a href="taihaa.html">Taihaa</a>, the high accuracy fate telling app, a serious app developed just for fun.</i></p>
 
-<p><audio autoplay loop preload="none"><source src="../audio/ripples.mp3" type="audio/mpeg" /></audio></p>
+<p><audio autoplay loop preload="none"><source src="http://www.sevenuc.com/audio/ripples.mp3" type="audio/mpeg" /></audio></p>
 
 <p><br><br></p>
 <p><br><br></p>
