--- a/en/speare.html
+++ b/en/speare.html
@@ -180,7 +180,7 @@ Spear enable people to write unlimited shell extension to do anything they want.
 <!-- Don't have a bias for a software because of its region, no child can choose its parents. -->
 <small>Despite the dragon is evil but it still can't escape under the claws of eagles.</small><br>
 </span>
-Speare seamlessly support debugging C, C++, Ruby, mruby, Lua, Python, PHP, Perl and Tcl scripts, more info please refer here: <a href="debugger.html" target="_blank" > → Speare debugger architecture</a>.
+Speare seamlessly support debugging C, C++, Ruby, mruby, Lua, Python, PHP, Perl, Tcl and AWK scripts, more info please refer here: <a href="debugger.html" target="_blank" > → Speare debugger architecture</a>.
 </p>
 
 
