--- a/en/reviewer.html
+++ b/en/reviewer.html
@@ -116,14 +116,18 @@ Chinese Chess contains the ancient oriental profound philosophy and wisdom, that
       <img class="d-block w-100" src="../images/reviewer/5.png" alt="Third slide">
     </div>
   </div>
-  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+
+
+  <!--a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
     <span class="sr-only">Previous</span>
   </a>
   <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="sr-only">Next</span>
-  </a>
+  </a-->
+
+
   </div>
 </div>
 </div>
@@ -134,19 +138,10 @@ Chinese Chess contains the ancient oriental profound philosophy and wisdom, that
 </audio></p>
 
 <p><br><br></p>
-<hr>
-
-<h2>Challenge Yourself!</h2>
-<p>There is an ancient DOS game from 1980s, Chinese Chess Master III ( 將族 III), the AI algorithm of the game is amazing powerful! The AI engine doesn't use any deep learning algorithms that almost every modern AI app used. Before AlphaGo from google versus Lee Sedol (one of the top Go game players) at March 2016, many years ago, this excellent DOS game made so many professional human chess players lost. How powerful the chess players in this game are unknown! AlphaGo run with distributed 1,920 CPUs and 280 GPU and more, but this DOS game is only 926KB running on one CPU with 64KB memory! Might this small game requires you to challenge it in your whole life! Maybe the weakest one, Mr. pig can easily beat you! Here it is!</p>
-
-<div class="screenshots">
-<p><a href="../images/reviewer/cch1.png" target="_blank"><img class="screenshots" src="../images/reviewer/cch1.png" class="screenshots"></a><p>
-<p><a href="../images/reviewer/cch2.png" target="_blank"><img class="screenshots" src="../images/reviewer/cch2.png" class="screenshots"></a><p>
-<p><a href="../images/reviewer/cch3.png" target="_blank"><img class="screenshots" src="../images/reviewer/cch3.png" class="screenshots"></a><p>
-</dir>
 
 </div>
-<p>You can challenge this dead powerful game on Android phone, iPhone, iPad, or on Macintosh, Windows and Linux, anywhere you required to play on, I'm pleasured to packing it for you on any platform. Further more, I've collected tons of wonderful DOS game/arcade game so many years, if you're interesting in play them again, please email your request.</p>
+
+
 
 <p><br><br></p>
 </div><!-- container-fluid -->
